--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\amira\eclipse-workspace\ApiTestRestAssured\testng.xml</span>
+                    <span>D:\project\ApiTestRestAssured\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -215,7 +215,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\amira\eclipse-workspace\ApiTestRestAssured\testng.xml</span>
+            <span class="header-content">D:\project\ApiTestRestAssured\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -269,36 +269,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Post_UserTest')
 data.setCell(0, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(0, 3, 1754);
+data.setCell(0, 3, 1270);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'get_User')
 data.setCell(1, 2, 'ApiTestCases.Get_User')
-data.setCell(1, 3, 813);
+data.setCell(1, 3, 467);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'Validate_Response_Code_201_Test')
 data.setCell(2, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(2, 3, 7);
+data.setCell(2, 3, 6);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'Validate_Created_FristName_Test')
 data.setCell(3, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(3, 3, 4);
+data.setCell(3, 3, 5);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'Validate_Response_Code_200_Test')
 data.setCell(4, 2, 'ApiTestCases.Get_User')
 data.setCell(4, 3, 2);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'Validate_Retrived_FristName_Test')
-data.setCell(5, 2, 'ApiTestCases.Get_User')
+data.setCell(5, 1, 'get_UserId_Test')
+data.setCell(5, 2, 'ApiTestCases.Post_AddUserTest')
 data.setCell(5, 3, 2);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'get_UserId_Test')
-data.setCell(6, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(6, 3, 1);
+data.setCell(6, 1, 'Validate_Retrived_FristName_Test')
+data.setCell(6, 2, 'ApiTestCases.Get_User')
+data.setCell(6, 3, 2);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -338,34 +338,34 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">Post_UserTest</span>
-                <span class="method-start">376 ms</span>
+                <span class="method-start">340 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">get_UserId_Test</span>
-                <span class="method-start">2135 ms</span>
+                <span class="method-start">1614 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Response_Code_201_Test</span>
-                <span class="method-start">2137 ms</span>
+                <span class="method-start">1617 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Created_FristName_Test</span>
-                <span class="method-start">2146 ms</span>
+                <span class="method-start">1624 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">ApiTestCases.Get_User</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">get_User</span>
-                <span class="method-start">2151 ms</span>
+                <span class="method-start">1631 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Response_Code_200_Test</span>
-                <span class="method-start">2966 ms</span>
+                <span class="method-start">2100 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Retrived_FristName_Test</span>
-                <span class="method-start">2968 ms</span>
+                <span class="method-start">2103 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
