--- a/test-output/index.html
+++ b/test-output/index.html
@@ -29,15 +29,15 @@
     <div class="navigator-root">
       <div class="navigator-suite-header">
         <span>All suites</span>
-        <a href="#" title="Collapse/expand all the suites" class="collapse-all-link">
-          <img src="collapseall.gif" class="collapse-all-icon">
+        <a href="#" class="collapse-all-link" title="Collapse/expand all the suites">
+          <img class="collapse-all-icon" src="collapseall.gif">
           </img> <!-- collapse-all-icon -->
         </a> <!-- collapse-all-link -->
       </div> <!-- navigator-suite-header -->
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Suite" class="navigator-link">
+            <a href="#" class="navigator-link" panel-name="suite-Suite">
               <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="test-xml-Suite">
                     <span>D:\project\ApiTestRestAssured\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="testlist-Suite">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="group-Suite">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="times-Suite">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="reporter-Suite">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-Suite">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Suite" class="navigator-link ">
+                  <a href="#" class="navigator-link " panel-name="chronological-Suite">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -101,38 +101,38 @@
                     </span>
                     <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" class="method navigator-link" hash-for-method="Post_UserTest">Post_UserTest</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" hash-for-method="Post_UserTest">Post_UserTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" class="method navigator-link" hash-for-method="Validate_Created_FristName_Test">Validate_Created_FristName_Test</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" hash-for-method="Validate_Created_FristName_Test">Validate_Created_FristName_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Get_User" class="method navigator-link" hash-for-method="Validate_Response_Code_200_Test">Validate_Response_Code_200_Test</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Get_User" hash-for-method="Validate_Response_Code_200_Test">Validate_Response_Code_200_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" class="method navigator-link" hash-for-method="Validate_Response_Code_201_Test">Validate_Response_Code_201_Test</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" hash-for-method="Validate_Response_Code_201_Test">Validate_Response_Code_201_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Get_User" class="method navigator-link" hash-for-method="Validate_Retrived_FristName_Test">Validate_Retrived_FristName_Test</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Get_User" hash-for-method="Validate_Retrived_FristName_Test">Validate_Retrived_FristName_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Get_User" class="method navigator-link" hash-for-method="get_User">get_User</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Get_User" hash-for-method="get_User">get_User</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" class="method navigator-link" hash-for-method="get_UserId_Test">get_UserId_Test</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="ApiTestCases.Post_AddUserTest" hash-for-method="get_UserId_Test">get_UserId_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -221,7 +221,7 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;ApiTestCases.Post_AddUserTest&quot;/&gt;
@@ -269,11 +269,11 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Post_UserTest')
 data.setCell(0, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(0, 3, 1270);
+data.setCell(0, 3, 1212);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'get_User')
 data.setCell(1, 2, 'ApiTestCases.Get_User')
-data.setCell(1, 3, 467);
+data.setCell(1, 3, 468);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'Validate_Response_Code_201_Test')
 data.setCell(2, 2, 'ApiTestCases.Post_AddUserTest')
@@ -281,19 +281,19 @@ data.setCell(2, 3, 6);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'Validate_Created_FristName_Test')
 data.setCell(3, 2, 'ApiTestCases.Post_AddUserTest')
-data.setCell(3, 3, 5);
+data.setCell(3, 3, 4);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'Validate_Response_Code_200_Test')
 data.setCell(4, 2, 'ApiTestCases.Get_User')
-data.setCell(4, 3, 2);
+data.setCell(4, 3, 3);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'get_UserId_Test')
-data.setCell(5, 2, 'ApiTestCases.Post_AddUserTest')
+data.setCell(5, 1, 'Validate_Retrived_FristName_Test')
+data.setCell(5, 2, 'ApiTestCases.Get_User')
 data.setCell(5, 3, 2);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'Validate_Retrived_FristName_Test')
-data.setCell(6, 2, 'ApiTestCases.Get_User')
-data.setCell(6, 3, 2);
+data.setCell(6, 1, 'get_UserId_Test')
+data.setCell(6, 2, 'ApiTestCases.Post_AddUserTest')
+data.setCell(6, 3, 1);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -338,34 +338,34 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">Post_UserTest</span>
-                <span class="method-start">340 ms</span>
+                <span class="method-start">313 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">get_UserId_Test</span>
-                <span class="method-start">1614 ms</span>
+                <span class="method-start">1529 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Response_Code_201_Test</span>
-                <span class="method-start">1617 ms</span>
+                <span class="method-start">1532 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Created_FristName_Test</span>
-                <span class="method-start">1624 ms</span>
+                <span class="method-start">1540 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">ApiTestCases.Get_User</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">get_User</span>
-                <span class="method-start">1631 ms</span>
+                <span class="method-start">1546 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Response_Code_200_Test</span>
-                <span class="method-start">2100 ms</span>
+                <span class="method-start">2018 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validate_Retrived_FristName_Test</span>
-                <span class="method-start">2103 ms</span>
+                <span class="method-start">2021 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
